Agregandi imagen en  testimonios y agregando un footer

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                 <li class="nav-list-item"><a class="nav-list-item-link" href="#">Inicio</a></li>
                 <li class="nav-list-item"><a class="nav-list-item-link" href="#introduction">Introducción</a></li>
                 <li class="nav-list-item"><a class="nav-list-item-link" href="#testimonios">Testimonios</a></li>
+                <li class="nav-list-item"><a class="nav-list-item-link" href="creditos.html">Equipo de desarrollo</a></li>
             </ul>
         </nav>
     </header>
@@ -56,6 +57,10 @@
             
         </div>
     </section>
+
+    <footer>
+        <p>Página creada utilizando columnas periodísticas por alumnos del Bachillerato 11</p>
+    </footer>
 
     <script src="js/index.js"></script>
 
